--- a/Aufgaben/twitter-qa/pom.xml
+++ b/Aufgaben/twitter-qa/pom.xml
@@ -87,6 +87,19 @@
 		<!-- Add your own dependencies here, if in compile scope, they are added 
 			to the jar -->
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm.assert</groupId>
+			<artifactId>camunda-bpm-assert</artifactId>
+			<version>5.0.0</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<repositories>
