--- a/Aufgaben/twitter-qa/pom.xml
+++ b/Aufgaben/twitter-qa/pom.xml
@@ -98,7 +98,11 @@
 			<version>5.0.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>3.0.5</version>
+		</dependency>
 
 	</dependencies>
 
