--- a/Aufgaben/twitter-qa/pom.xml
+++ b/Aufgaben/twitter-qa/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>twitter4j-core</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm.extension</groupId>
+			<artifactId>camunda-bpm-process-test-coverage</artifactId>
+			<version>0.3.2</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
